# vorocrust_rewrite

./: .gitignore  CMakeLists.txt  extract_sphere_centers.py
include/: Generator.h  Geometry.h  MeshingTree.h  Methods.h  RandomSampler.h
src/: Generator.cpp  Geometry.cpp  MeshingTree.cpp  Methods.cpp  RandomSampler.cpp  VoronoiMesh.cpp  VoronoiMesh1.cpp  main.cpp
